<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_pink"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/forty_dp">

    <EditText
        android:id="@+id/register_username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/username"
        android:padding="@dimen/ten_dp"
        android:singleLine="true"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/register_password_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_dp"
        android:background="@color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/ten_dp"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/register_confirm_password_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_dp"
        android:background="@color/white"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="@dimen/ten_dp"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/register_create_account_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sixty_dp"
        android:layout_marginTop="@dimen/forty_dp"
        android:background="@color/colorAccent"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="@dimen/twenty_dp" />

</LinearLayout>

