<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pista_color"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_weight=".4"
            android:background="@color/pista_color"
            android:gravity="center"
            android:hint="@string/date"
            android:padding="@dimen/ten_dp"
            android:textSize="@dimen/twenty_dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/day_view"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sixty_dp"
            android:layout_weight=".6"
            android:background="@color/pista_color"
            android:hint="@string/day"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:padding="@dimen/ten_dp"
            android:textSize="@dimen/twenty_dp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="@dimen/ten_dp"
        android:background="@color/some_blue"
        android:text="@string/set"
        android:textColor="@color/white"
        android:textSize="@dimen/fifteen_dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/holiday_entry_sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/log_out"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_dp" />

    </RelativeLayout>

</LinearLayout>














