<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:showIn="@layout/admin_view_holiday">

    <TextView
        android:id="@+id/holidays_heading_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/ten_dp"
        android:paddingTop="@dimen/five_dp"
        android:text="@string/holiday"
        android:textColor="@android:color/holo_red_light"
        android:textSize="@dimen/thirty_dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/add_holiday_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/add_holiday"
        android:textColor="@color/white"
        android:textSize="@dimen/twenty_dp" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/holidays_heading_text_view">

        <ListView
            android:id="@+id/admin_leave_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five_dp"
            android:background="@color/background_green" />

    </android.support.v4.widget.SwipeRefreshLayout>

    <Button
        android:id="@+id/admin_view_holiday_sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:textSize="@dimen/twenty_dp" />

</RelativeLayout>




