<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.prajna.leave.MainActivity">

    <TextView
        android:id="@+id/leave_balance_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/fifteen_dp"
        android:text="@string/leave_balance"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/thirty_dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/main_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/leave_balance_text_view"
        android:text=""
        android:textColor="@color/some_blue"
        android:textSize="@dimen/thirty_dp"
        android:textStyle="bold" />

    <GridLayout
        android:id="@+id/grid_layout_sick_leave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_name_text_view"
        android:layout_marginBottom="@dimen/fifteen_dp"
        android:alignmentMode="alignBounds"
        android:background="@color/cream"
        android:columnCount="2"
        android:padding="@dimen/five_dp">

        <TextView
            android:id="@+id/sick_leave_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/sick_leave"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/some_blue"
            android:textIsSelectable="true"
            android:textSize="@dimen/twenty_dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sick_leave_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="left|center_vertical"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/some_blue"
            android:textIsSelectable="true"
            android:textSize="@dimen/twenty_dp"
            android:textStyle="bold" />

    </GridLayout>

    <GridLayout
        android:id="@+id/grid_layout_casual_leave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/grid_layout_sick_leave"
        android:layout_marginBottom="@dimen/fifteen_dp"
        android:alignmentMode="alignBounds"
        android:background="@color/cream"
        android:columnCount="2"
        android:padding="@dimen/five_dp">

        <TextView
            android:id="@+id/casual_leave_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/casual_leave"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/some_blue"
            android:textIsSelectable="true"
            android:textSize="@dimen/twenty_dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/casual_leave_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="left|center_vertical"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/some_blue"
            android:textIsSelectable="true"
            android:textSize="@dimen/twenty_dp"
            android:textStyle="bold" />

    </GridLayout>

    <GridLayout
        android:id="@+id/grid_layout_earn_leave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/grid_layout_casual_leave"
        android:layout_marginBottom="@dimen/fifteen_dp"
        android:alignmentMode="alignBounds"
        android:background="@color/cream"
        android:columnCount="2"
        android:padding="@dimen/five_dp">

        <TextView
            android:id="@+id/earn_leave_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/earn_leave"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/some_blue"
            android:textIsSelectable="true"
            android:textSize="@dimen/twenty_dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/earn_leave_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="left|center_vertical"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/some_blue"
            android:textIsSelectable="true"
            android:textSize="@dimen/twenty_dp"
            android:textStyle="bold" />

    </GridLayout>

    <Button
        android:id="@+id/activity_main_holidays_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/grid_layout_earn_leave"
        android:layout_toLeftOf="@+id/add_holiday_button"
        android:background="@color/colorPrimary"
        android:text="@string/upcoming_holidays"
        android:textColor="@color/cream"
        android:textSize="@dimen/twenty_dp" />

    <Button
        android:id="@+id/activity_main_apply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@color/colorPrimary"
        android:text="@string/apply"
        android:textColor="@color/cream"
        android:textSize="@dimen/twenty_dp" />

    <Button
        android:id="@+id/view_last_leave_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/activity_main_apply_button"
        android:background="@color/colorPrimary"
        android:text="@string/view"
        android:textColor="@color/cream"
        android:textSize="@dimen/twenty_dp" />

</RelativeLayout>
