<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/admin_main_linear_layout_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty_five_dp"
        android:orientation="horizontal"
        android:weightSum="1.0">

        <TextView
            android:id="@+id/admin_main_name_text_view"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_weight=".4"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/some_blue"
            android:textSize="@dimen/twenty_dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/admin_main_name_edit_text"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginLeft="@dimen/sixty_dp"
            android:layout_weight=".6"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:padding="@dimen/ten_dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/admin_main_linear_layout_sick_leave"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty_five_dp"
        android:layout_below="@+id/admin_main_linear_layout_name"
        android:layout_marginTop="@dimen/ten_dp"
        android:orientation="horizontal"
        android:weightSum="1.0">

        <TextView
            android:id="@+id/admin_main_sick_leave_text_view"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_weight=".4"
            android:gravity="center"
            android:text="@string/sick_leave"
            android:textColor="@color/some_blue"
            android:textSize="@dimen/twenty_dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/admin_main_sick_leave_edit_text"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginLeft="@dimen/sixty_dp"
            android:layout_weight=".6"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:padding="@dimen/ten_dp"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/admin_main_linear_layout_casual_leave"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty_five_dp"
        android:layout_below="@+id/admin_main_linear_layout_sick_leave"
        android:layout_marginTop="@dimen/ten_dp"
        android:orientation="horizontal"
        android:weightSum="1.0">

        <TextView
            android:id="@+id/admin_main_casual_leave_text_view"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_weight=".4"
            android:gravity="center"
            android:text="@string/casual_leave"
            android:textColor="@color/some_blue"
            android:textSize="@dimen/twenty_dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/admin_main_casual_leave_edit_text"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginLeft="@dimen/sixty_dp"
            android:layout_weight=".6"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:padding="@dimen/ten_dp"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/admin_main_linear_layout_earn_leave"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty_five_dp"
        android:layout_below="@+id/admin_main_linear_layout_casual_leave"
        android:layout_marginTop="@dimen/ten_dp"
        android:orientation="horizontal"
        android:weightSum="1.0">

        <TextView
            android:id="@+id/admin_main_earn_leave_text_view"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_weight=".4"
            android:gravity="center"
            android:text="@string/earn_leave"
            android:textColor="@color/some_blue"
            android:textSize="@dimen/twenty_dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/admin_main_earn_leave_edit_text"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginLeft="@dimen/sixty_dp"
            android:layout_weight=".6"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:padding="@dimen/ten_dp"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/admin_main_linear_layout_apply_to"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty_five_dp"
        android:layout_below="@+id/admin_main_linear_layout_earn_leave"
        android:layout_marginTop="@dimen/ten_dp"
        android:orientation="horizontal"
        android:weightSum="1.0">

        <TextView
            android:id="@+id/admin_main_apply_to_text_view"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_weight=".4"
            android:gravity="center"
            android:text="@string/apply_to"
            android:textColor="@color/some_blue"
            android:textSize="@dimen/twenty_dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/admin_main_apply_to_spinner"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginLeft="@dimen/sixty_dp"
            android:layout_weight=".6"
            android:padding="@dimen/ten_dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/admin_main_linear_layout_contact_apply_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/admin_main_linear_layout_apply_to"
        android:gravity="center"
        android:paddingTop="@dimen/thirty_dp">

        <Button
            android:id="@+id/admin_main_add_leave_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blu"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_dp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/admin_main_sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:textSize="@dimen/twenty_dp" />

</RelativeLayout>






